fix: 불변리스트 생성 코드 변경